update post: How to create EKS cluster in AWS Using eksctl

--- a/cld96b07p000209l1bt243va4.md
+++ b/cld96b07p000209l1bt243va4.md
@@ -2,7 +2,7 @@
 
 ---
 
-#  **What is Amazon EKS?**
+# **What is Amazon EKS?**
 
 **Amazon EKS** is a fully managed container orchestration service. EKS allows you to quickly deploy a production-ready Kubernetes cluster in AWS, deploy and manage containerized applications more easily with a fully managed Kubernetes service.
 
@@ -61,7 +61,7 @@ EKS takes care of the master node/control plane. We need to create worker nodes.
     ```
     
 
-## **<mark>Create IAM Role with Administrator Access:-</mark>**
+## **Create IAM Role with Administrator Access:-**
 
 You need to create an IAM role with the AdministratorAccess policy.  
 Go to the AWS console, IAM, and click on Roles. create a role
@@ -108,7 +108,7 @@ eksctl create cluster \
              --nodes 2
 ```
 
-<mark>The above command should create an EKS cluster in AWS, it might take 15 to 20 mins.&nbsp;The&nbsp;</mark> ***<mark>eksctl</mark>*** <mark>&nbsp;tool uses CloudFormation under the hood, creating one stack for the EKS master control plane and another stack for the worker nodes.</mark>
+<mark>The above command should create an EKS cluster in AWS, it might take 15 to 20 mins.&nbsp;The&nbsp;</mark>  ***<mark>eksctl</mark>***  <mark>&nbsp;tool uses CloudFormation under the hood, creating one stack for the EKS master control plane and another stack for the worker nodes.</mark>
 
 *This should confirm that the EKS cluster is up and running*.
 
