update post: How to create Amazon EKS cluster in AWS cloud using Terraform

--- a/cldj59uog00000am96b0217o1.md
+++ b/cldj59uog00000am96b0217o1.md
@@ -37,7 +37,7 @@ Amazon EKS is a fully managed container orchestration service. EKS allows you to
     
 * **Install AWS CLI**
     
-* [**Install kubectl**](https://biswajitblogs.hashnode.dev/how-to-create-eks-cluster-in-aws-using-eksctl)  – A command line tool for working with Kubernetes clusters.
+* [**Install kubectl**](https://biswajitblogs.hashnode.dev/how-to-create-eks-cluster-in-aws-using-eksctl#heading-pre-requisites)  – A command line tool for working with Kubernetes clusters.
     
 * Create an IAM role with **<mark>an AdministratorAccess</mark>** policy or add AWS root keys
     
@@ -54,7 +54,7 @@ Amazon EKS is a fully managed container orchestration service. EKS allows you to
 
 ![](https://1.bp.blogspot.com/-ouvQxbxiNDw/XxkW-Jl1hjI/AAAAAAAAC44/24MMBqVk7F8-yBMW7GSAu4cZsksrMVsowCLcBGAsYHQ/s1600/iam%2Brole-2.png align="center")
 
-<mark>Now search for&nbsp;</mark>  **<mark>AdministratorAccess</mark>**  <mark>&nbsp;policy and click</mark>
+<mark>Now search for&nbsp;</mark>   **<mark>AdministratorAccess</mark>**   <mark>&nbsp;policy and click</mark>
 
 ![](https://blogger.googleusercontent.com/img/a/AVvXsEjjskRvkR5pnfaQROPCxN0DW8-MQ-NzdypH0hsViuyJrp6egV78HpuGoFa9y3TMyDAjSNxuAq89KRl-fHczbfDf8fjKisGadMa-564YDZdv-cSFnzExFhJh3xaa0RJtpr1rvFbxrZ7dKI16U7smh5VOP_Ew5OLe_t3vL5RUr1NJ9mq_sPD_KQB_bkJxTw=s1686 align="center")
 
