Synced existing file post: How to create Amazon EKS cluster in AWS cloud using Terraform

--- a/cldj59uog00000am96b0217o1.md
+++ b/cldj59uog00000am96b0217o1.md
@@ -1,4 +1,12 @@
-# How to create Amazon EKS cluster in AWS cloud using Terraform
+---
+title: "How to create Amazon EKS cluster in AWS cloud using Terraform"
+datePublished: Mon Jan 30 2023 18:28:51 GMT+0000 (Coordinated Universal Time)
+cuid: cldj59uog00000am96b0217o1
+slug: how-to-create-amazon-eks-cluster-in-aws-cloud-using-terraform
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1675101257339/e9bb037f-2765-4dd2-8a90-1cec90d875fb.jpeg
+tags: aws, hashnode, terraform, blogswithcc, wemakedevs
+
+---
 
 ---
 
