Synced existing file post: How to create EKS cluster in AWS Using eksctl

--- a/cld96b07p000209l1bt243va4.md
+++ b/cld96b07p000209l1bt243va4.md
@@ -1,4 +1,12 @@
-# How to create EKS cluster in AWS Using eksctl
+---
+title: "How to create EKS cluster in AWS Using eksctl"
+datePublished: Mon Jan 23 2023 19:00:03 GMT+0000 (Coordinated Universal Time)
+cuid: cld96b07p000209l1bt243va4
+slug: how-to-create-eks-cluster-in-aws-using-eksctl
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1674495708318/d6503988-fa33-4320-9be6-b2a82323ca21.png
+tags: aws, kubernetes, hashnode, kunalkushwaha, wemakedevs
+
+---
 
 ---
 
