--- a/cld65j55r000208jt2y2ob8i1.md
+++ b/cld65j55r000208jt2y2ob8i1.md
@@ -1,4 +1,12 @@
-# Kubernetes Interview Questions
+---
+title: "Kubernetes Interview Questions"
+datePublished: Sat Jan 21 2023 16:15:04 GMT+0000 (Coordinated Universal Time)
+cuid: cld65j55r000208jt2y2ob8i1
+slug: kubernetes-interview-questions
+cover: https://cdn.hashnode.com/res/hashnode/image/stock/unsplash/9cXMJHaViTM/upload/47a7d03672ae22f27dd5e42b0d015c0f.jpeg
+tags: kubernetes, devops, blogswithcc, kunalkushwaha, wemakedevs
+
+---
 
 ---
 
