update post: How to create Amazon EKS cluster using Terraform

--- a/cldj59uog00000am96b0217o1.md
+++ b/cldj59uog00000am96b0217o1.md
@@ -1,9 +1,10 @@
 ---
-title: "How to create Amazon EKS cluster in AWS cloud using Terraform"
+title: "How to create Amazon EKS cluster using Terraform"
+seoTitle: "Amazon EKS is a fully managed container orchestration service."
 datePublished: Mon Jan 30 2023 18:28:51 GMT+0000 (Coordinated Universal Time)
 cuid: cldj59uog00000am96b0217o1
-slug: how-to-create-amazon-eks-cluster-in-aws-cloud-using-terraform
-cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1675101257339/e9bb037f-2765-4dd2-8a90-1cec90d875fb.jpeg
+slug: how-to-create-amazon-eks-cluster-using-terraform
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1685220165487/23699ad4-386f-44fc-95cf-0445ca5f1f1d.png
 tags: aws, hashnode, terraform, blogswithcc, wemakedevs
 
 ---
