update post: How to create EKS cluster in AWS Using eksctl

--- a/cld96b07p000209l1bt243va4.md
+++ b/cld96b07p000209l1bt243va4.md
@@ -1,9 +1,11 @@
 ---
 title: "How to create EKS cluster in AWS Using eksctl"
+seoTitle: "Amazon EKS"
+seoDescription: "Amazon EKS is a fully managed container orchestration service. EKS allows you to quickly deploy a production-ready Kubernetes cluster in AWS."
 datePublished: Mon Jan 23 2023 19:00:03 GMT+0000 (Coordinated Universal Time)
 cuid: cld96b07p000209l1bt243va4
 slug: how-to-create-eks-cluster-in-aws-using-eksctl
-cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1674495708318/d6503988-fa33-4320-9be6-b2a82323ca21.png
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1685224096729/9d236870-e0b5-4731-8cc9-86cc153aca51.png
 tags: aws, kubernetes, hashnode, kunalkushwaha, wemakedevs
 
 ---
