--- a/cld65j55r000208jt2y2ob8i1.md
+++ b/cld65j55r000208jt2y2ob8i1.md
@@ -1,9 +1,11 @@
 ---
 title: "Kubernetes Interview Questions"
+seoTitle: "MPORTANT KUBERNETES INTERVIEW QUESTIONS AND ANSWERS"
+seoDescription: "Kubernetes is a distributed open-source technology that helps us in scheduling and executing application containers within and across clusters."
 datePublished: Sat Jan 21 2023 16:15:04 GMT+0000 (Coordinated Universal Time)
 cuid: cld65j55r000208jt2y2ob8i1
 slug: kubernetes-interview-questions
-cover: https://cdn.hashnode.com/res/hashnode/image/stock/unsplash/9cXMJHaViTM/upload/47a7d03672ae22f27dd5e42b0d015c0f.jpeg
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1685628458483/f08af5bf-1eb0-425c-af4c-d4ec92807727.png
 tags: kubernetes, devops, blogswithcc, kunalkushwaha, wemakedevs
 
 ---
