update post: How to create EKS cluster in AWS Using eksctl

--- a/cld96b07p000209l1bt243va4.md
+++ b/cld96b07p000209l1bt243va4.md
@@ -1,11 +1,11 @@
 ---
 title: "How to create EKS cluster in AWS Using eksctl"
-seoTitle: "Amazon EKS"
+seoTitle: "amazon eks"
 seoDescription: "Amazon EKS is a fully managed container orchestration service. EKS allows you to quickly deploy a production-ready Kubernetes cluster in AWS."
 datePublished: Mon Jan 23 2023 19:00:03 GMT+0000 (Coordinated Universal Time)
 cuid: cld96b07p000209l1bt243va4
 slug: how-to-create-eks-cluster-in-aws-using-eksctl
-cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1685224096729/9d236870-e0b5-4731-8cc9-86cc153aca51.png
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1685632038541/e9bf7135-600b-4e4d-9444-5de38e175697.png
 tags: aws, kubernetes, hashnode, kunalkushwaha, wemakedevs
 
 ---
